Bug 1052304 - Notify OPP manager when Bluetooth socket message error occurs. r=btian, a=bajaj